--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,14 @@
 [build]
   base = "project"
-  command = "npm run build"
+  command = "npm install && npm run build"
   publish = "dist"
 
 [build.environment]
-  NODE_VERSION = "18" 
+  NODE_VERSION = "18.17.0"
+  NPM_VERSION = "9.6.7"
+  NPM_FLAGS = "--legacy-peer-deps"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200 
